Re-evaluated tunning coefficients.

--- a/sample_scripts/nips2013/tunning/ResultsKL/OutFile.final16.1
+++ b/sample_scripts/nips2013/tunning/ResultsKL/OutFile.final16.1
@@ -1,9 +1,9 @@
-alphaLeft=0.0715913,alphaRight=0.0963548
-alphaLeft=0.162049,alphaRight=0.293543
-alphaLeft=0.144966,alphaRight=1.15973
-alphaLeft=0.243803,alphaRight=3.53309
-alphaLeft=0.594398,alphaRight=4.75519
-alphaLeft=2.43718,alphaRight=5.94193
-alphaLeft=282.549,alphaRight=927.142
-alphaLeft=155.98,alphaRight=688.864
-alphaLeft=63.978,alphaRight=927.142
+alphaLeft=0.0742997,alphaRight=0.0742997
+alphaLeft=0.0894582,alphaRight=0.395079
+alphaLeft=0.162049,alphaRight=0.715665
+alphaLeft=0.243803,alphaRight=1.44916
+alphaLeft=0.304648,alphaRight=3.28021
+alphaLeft=0.963215,alphaRight=2.34835
+alphaLeft=2.26274,alphaRight=5.51664
+alphaLeft=96.2547,alphaRight=96.2551
+alphaLeft=217.875,alphaRight=394.671
