--- a/sample_scripts/nips2013/tunning/ResultsKL/OutFile.sig10k.1
+++ b/sample_scripts/nips2013/tunning/ResultsKL/OutFile.sig10k.1
@@ -1,9 +1,9 @@
-alphaLeft=0.15045,alphaRight=0.894272
-alphaLeft=0.304648,alphaRight=2.43718
-alphaLeft=0.512355,alphaRight=5.51662
-alphaLeft=0.640222,alphaRight=22.6196
-alphaLeft=0.963215,alphaRight=202.281
-alphaLeft=1.15973,alphaRight=593.782
-alphaLeft=2.02421,alphaRight=572.138
-alphaLeft=4.09884,alphaRight=860.783
-alphaLeft=74.2226,alphaRight=28235.5
+alphaLeft=0.116013,alphaRight=0.689578
+alphaLeft=0.0800277,alphaRight=2.10078
+alphaLeft=0.39508,alphaRight=4.25389
+alphaLeft=0.493679,alphaRight=7.15416
+alphaLeft=0.594398,alphaRight=21.0005
+alphaLeft=0.894273,alphaRight=139.536
+alphaLeft=1.2036,alphaRight=187.802
+alphaLeft=2.02421,alphaRight=315.844
+alphaLeft=4.09884,alphaRight=860.778
