minor manual fix

--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -78,7 +78,7 @@ Pittsburgh, PA, USA\\
 \maketitle
 
 {\begin{center}{\small \textbf{Maintainer}: Leonid Boytsov}\end{center}}
-{\begin{center}{Version 1.0}\end{center} \todonote{Replace all URL's with release specific names}}
+{\begin{center}{Version 1.0}\end{center} 
 {\begin{center}{December 2013}\end{center}}
 
 \begin{abstract}
